2006-10-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Added libtinymail-camel/camel-lite

2006-10-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed the Python bindings
	* Added lots of code samples to the API reference documentation

	* This was a major API change in the Python bindings

2006-10-15  Philip Van Hoof <pvanhoof@gnome.org>

	* Major refactoring in the TnyMimePartSaveStrategy stuff
	* Introduced a new client-type for the strategy pattern:
	the TnyMimePartSaver
	* Removed all saving functionality from the default gtk+
	types: the developer who will create an E-mail client is
	the person who should connect the dots (inherit a TnyMsgView
	and/or a TnyMimePartView, or implement it fully, and let that
	type also implement the TnyMimePartSaver)
	* Renamed TnySaveStrategy to TnyMimePartSaveStrategy

	*  This was a major API change in libtinymailui
	
2006-10-13  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the TnyGtkAttachmentMimePartView type

	*  This was a major API change in libtinymailui-gtk
	
2006-10-12  Philip Van Hoof <pvanhoof@gnome.org>

	* The new TnyMimePartView API
	* The TnyMimePartView API implemented for Gtk+
	* The TnyMimePartView API implemented for GtkMozEmbed

	* This was a major API change in libtinymailui
	 
2006-09-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfix in tny-camel-folder.c, added documentation aid
	* Fixed possible memory leak

2006-09-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Aggressively hardened the TnyCamelFolder implementation. This
	hardening isn't good for debugging, as major bugs and mistakes now
	won't crash. Therefore it's possible that some hardening is going to
	come inbetween #ifdef/#endif's so that developers still get a crashing
	tinymail. However. I soon want to release, therefore this hardening
	tries to on forehand detect problems with the CamelFolder instance.

	These problems specifically arise when CamelOperation cancellations
	have happened. The problem is that the instance (priv->folder) isn't