@@ -1,9 +1,10 @@
 INCLUDES = -I. -I$(top_srcdir) -I$(top_srcdir)/tests/shared \
-	$(TINYMAIL_CFLAGS) 				\
-	-I$(top_srcdir)/libtinymail			\
-	-I$(top_srcdir)/libtinymailui			\
-	-I$(top_srcdir)/libtinymailui-gtk		\
-	-I$(top_srcdir)/libtinymail-camel		\
+	$(TINYMAIL_CFLAGS) \
+	-I$(top_srcdir)/libtinymail \
+	-I$(top_srcdir)/libtinymailui \
+	-I$(top_srcdir)/libtinymailui-gtk \
+	-I$(top_srcdir)/libtinymail-camel \
+	-I$(top_srcdir)/libtinymail-camel/camel-lite \
 	-DASYNC_HEADERS
 
 if BUILD_GNOME
@@ -17,22 +18,20 @@ endif
 bin_PROGRAMS = folder-lister folder-lister-async
 
 folder_lister_SOURCES = folder-lister.c 
-folder_lister_LDADD = 							        \
-	$(TINYMAIL_LIBS)						        \
-	$(LIBTINYMAIL_GNOME_DESKTOP_LIBS)					\
-	$(top_builddir)/libtinymail/libtinymail-$(API_VERSION).la 	        \
-	$(top_builddir)/libtinymailui/libtinymailui-$(API_VERSION).la	        \
-	$(top_builddir)/libtinymailui-gtk/libtinymailui-gtk-$(API_VERSION).la   \
-	$(top_builddir)/libtinymail-camel/libtinymail-camel-$(API_VERSION).la	\
+folder_lister_LDADD = \
+	$(TINYMAIL_LIBS) $(LIBTINYMAIL_GNOME_DESKTOP_LIBS) \
+	$(top_builddir)/libtinymail/libtinymail-$(API_VERSION).la \
+	$(top_builddir)/libtinymailui/libtinymailui-$(API_VERSION).la \
+	$(top_builddir)/libtinymailui-gtk/libtinymailui-gtk-$(API_VERSION).la \
+	$(top_builddir)/libtinymail-camel/libtinymail-camel-$(API_VERSION).la \
 	$(top_builddir)/tests/shared/libtestsshared.a
 
 folder_lister_async_SOURCES = folder-lister-async.c
-folder_lister_async_LDADD =                                                     \
-	$(TINYMAIL_LIBS)                                                        \
-	$(LIBTINYMAIL_GNOME_DESKTOP_LIBS)                                       \
-	$(top_builddir)/libtinymail/libtinymail-$(API_VERSION).la               \
-	$(top_builddir)/libtinymailui/libtinymailui-$(API_VERSION).la           \
-	$(top_builddir)/libtinymailui-gtk/libtinymailui-gtk-$(API_VERSION).la   \
-	$(top_builddir)/libtinymail-camel/libtinymail-camel-$(API_VERSION).la   \
+folder_lister_async_LDADD = \
+	$(TINYMAIL_LIBS) $(LIBTINYMAIL_GNOME_DESKTOP_LIBS) \
+	$(top_builddir)/libtinymail/libtinymail-$(API_VERSION).la \
+	$(top_builddir)/libtinymailui/libtinymailui-$(API_VERSION).la \
+	$(top_builddir)/libtinymailui-gtk/libtinymailui-gtk-$(API_VERSION).la \
+	$(top_builddir)/libtinymail-camel/libtinymail-camel-$(API_VERSION).la \
 	$(top_builddir)/tests/shared/libtestsshared.a
 
